增加tron
